--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,49 +1,63 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0 auto;
 }
-
 body {
-    background: linear-gradient(360deg, #00e0fe, #1107fe);
-    font-family: "Poppins", sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-image: url(wbg.jpg);
+	font-size: large;
+	background: linear-gradient(360deg, #00e0fe, #1107fe);
 }
-
-input {
-    background-color: #fff;
-    border: none;
-    border-radius: 25px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    font-family: inherit;
-    font-size: 1rem;
-    padding: 1rem;
-    min-width: 300px;
+.card {
+	background: rgba(0, 0, 0, 0.5);
+	opacity: 0.7;
+	color: rgb(7, 7, 7);
+	padding: 2em;
+	border-radius: 15px;
+	width: 100%;
+	max-width: 560px;
+	margin: 1em;
 }
-
-input:focus {
-    outline: none;
+.search {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
-
-.weather {
-    font-size: 2rem;
-    text-align: center;
-    background: steelblue;
-    border-radius: 20px;
-    margin-top: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.8);
-
+button {
+	margin: 0.5em;
+	border-radius: 10%;
+	padding-top: 20px;
+	border: none;
+	height: 50px;
+	width: 50px;
+	outline: none;
+	background: rgb(179, 177, 177);
+	color: rgb(7, 7, 7);
+	cursor: pointer;
+	transition: 0.2s ease-in-out;
 }
+ button:hover {
+	background-color: whitesmoke;
+} 
 
-.weather h2 {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0;
+input.searchBar {
+	border: none;
+	outline: steelblue;
+	padding: 0.4em 1em;
+	border-radius: 24px;
+	background: #fff;
+	color: black;
+	font-family: inherit;
+	font-size: 105%;
+	width: calc(100% - 100px);
+}
+.temp {
+	margin: 0.1em;
+}
+.description {
+	text-transform: capitalize;
+	
 }
